bynkc/tests/fixtures/positive/236_websocket_chatroom/src/chat.bynk
context chat

type RoomId = opaque String
type UserId = opaque String
type ServerFrame = { text: String }
type ClientFrame = { text: String }

actor Participant { auth = Bearer(secret = "AUTH_SECRET"), identity = UserId }

-- The §20 chat-room: a `from WebSocket` service authenticates the upgrade at the
-- edge (`by`), the `on open` handler receives a fresh owned `Connection`, sends a
-- welcome frame, then transfers it into the Room agent (the linearity discipline
-- governs the connection throughout). On the bundle target the connection is a
-- `TestConnection` (capture-and-inspect); the Workers hibernatable mapping is a
-- later increment.
service ChatGateway from WebSocket(in: ClientFrame, out: ServerFrame) {
  on open by user: Participant (roomId: RoomId) -> Effect[()] {
    let _ <- connection.send(ServerFrame { text: "welcome" })
    let _ <- Room(roomId).join(user.identity, connection)
    ()
  }

  -- Slice 3b-iii/4: an inbound frame is posted to the room, which broadcasts it to
  -- every connection (the sender included — the §20 fan-out); on close, the stored
  -- connection is disposed via the agent. On the bundle target these are callable
  -- surface methods a `TestConnection` test drives.
  on message by user: Participant (roomId: RoomId, frame: ClientFrame) -> Effect[()] {
    let _ <- Room(roomId).post(user.identity, frame.text)
    ()
  }

  on close by user: Participant (roomId: RoomId) -> Effect[()] {
    let _ <- Room(roomId).leave(user.identity)
    ()
  }
}

agent Room {
  key id: RoomId
  store members: Set[UserId]
  store conns: Map[UserId, Connection[ServerFrame]]

  on call join(u: UserId, conn: Connection[ServerFrame]) -> Effect[()] {
    let _ <- members.add(u)
    let _ <- conns.put(u, conn)
    ()
  }

  on call leave(u: UserId) -> Effect[()] {
    let _ <- members.remove(u)
    let _ <- conns.remove(u)
    ()
  }

  -- Slice 4 (the closure): broadcast a message to every connection in the room.
  -- `conns.parTraverse` borrows each held connection and `send`s concurrently —
  -- the held-aware iteration borrow surface, the track's final piece.
  on call post(sender: UserId, text: String) -> Effect[()] {
    let _ <- conns.parTraverse((c: Connection[ServerFrame]) => c.send(ServerFrame { text: text }))
    ()
  }
}
